5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1637_2711.log
== TEST (2019-04-10 13:33:13) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))
total= ((qnticket*valor)+(qonibus*vonibus))

if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total= ((qnticket*valor)+(qonibus*vonibus))
NameError: name 'qnticket' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:33:51) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))
total= ((qticket*valor)+(qonibus*vonibus))

if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- EXECUTION TIME:
0.147216
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
Insuficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
Insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:33:57) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))
total= ((qticket*valor)+(qonibus*vonibus))

if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- OUTPUT:
Insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:34:44) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))
total= ((qticket*valor)+(qonibus*vonibus))

if(total<=valor):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- OUTPUT:
Insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:35:15) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))
total= ((qticket*valor)+(qonibus*vonibus))

if(total<valor):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- OUTPUT:
Insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:35:49) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))
total= ((qticket*valor)+(qonibus*vonibus))

if(total>=valor):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- OUTPUT:
Suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:36:06) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))
total= ((qticket*valor)+(qonibus*vonibus))

if(total>=valor):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- EXECUTION TIME:
0.208898
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
Suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
Suficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:37:51) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))
total= ((qnticket*valor)+(qonibus*vonibus))

if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- EXECUTION TIME:
0.178194
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 6, in <module>
    total= ((qnticket*valor)+(qonibus*vonibus))
NameError: name 'qnticket' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:38:10) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))
total= ((qnticket*valor)+(qonibus*vonibus))

if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- EXECUTION TIME:
0.152409
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 6, in <module>
    total= ((qnticket*valor)+(qonibus*vonibus))
NameError: name 'qnticket' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:04:46) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total= ((qnticket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- EXECUTION TIME:
0.207031
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 7, in <module>
    total= ((qnticket*valor)+(qonibus*vonibus))
NameError: name 'qnticket' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:04:47) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total= ((qnticket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total= ((qnticket*valor)+(qonibus*vonibus))
NameError: name 'qnticket' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:05:18) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total= ((qnticket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total= ((qnticket*valor)+(qonibus*vonibus))
NameError: name 'qnticket' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:10:57) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total= ((qnticket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total= ((qnticket*valor)+(qonibus*vonibus))
NameError: name 'qnticket' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:11:22) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

if(valor>=total):
total=((qnticket*valor)+(qonibus*vonibus))
	print("Suficiente")
else:
	print("Insuficiente")
	


-- EXECUTION TIME:
0.171097
-- ERROR:
  File "/home/codebench/codes/1637/2711/main.py", line 8
    total=((qnticket*valor)+(qonibus*vonibus))
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:11:23) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

if(valor>=total):
total=((qnticket*valor)+(qonibus*vonibus))
	print("Suficiente")
else:
	print("Insuficiente")
	


-- ERROR:
File "XXXX", line 8
    total=((qnticket*valor)+(qonibus*vonibus))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:11:24) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

if(valor>=total):
total=((qnticket*valor)+(qonibus*vonibus))
	print("Suficiente")
else:
	print("Insuficiente")
	


-- ERROR:
File "XXXX", line 8
    total=((qnticket*valor)+(qonibus*vonibus))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:11:39) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qnticket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total=((qnticket*valor)+(qonibus*vonibus))
NameError: name 'qnticket' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:11:58) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qicket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- EXECUTION TIME:
0.265445
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 7, in <module>
    total=((qicket*valor)+(qonibus*vonibus))
NameError: name 'qicket' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:11:59) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qicket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total=((qicket*valor)+(qonibus*vonibus))
NameError: name 'qicket' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:11:59) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qicket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- EXECUTION TIME:
0.21626
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 7, in <module>
    total=((qicket*valor)+(qonibus*vonibus))
NameError: name 'qicket' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:23) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- EXECUTION TIME:
0.153492
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
Insuficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
Insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:12:23) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- EXECUTION TIME:
0.205401
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
Insuficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
Insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:12:24) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- OUTPUT:
Insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:13:19) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- OUTPUT:
Suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:13:32) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- EXECUTION TIME:
0.123763
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
Suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
Suficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:15:04) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("Suficiente")
else:
	print("Insuficiente")
	


-- OUTPUT:
Insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:16:22) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- EXECUTION TIME:
0.143271
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:16:22) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:17:35) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(valor>=total):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:18:01) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(valor<=total):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- EXECUTION TIME:
0.23403
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:18:02) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(valor<=total):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:18:47) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:18:49) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- EXECUTION TIME:
0.128732
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:18:49) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:18:59) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = float(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = float(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:49:55) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:57) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- EXECUTION TIME:
0.228488
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:58) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- EXECUTION TIME:
0.230892
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:58) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- EXECUTION TIME:
0.144853
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:58) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
	


-- EXECUTION TIME:
0.306891
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2711/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:50:51) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	print("SUFICIENTE") .upper()
else:
	print("INSUFICIENTE") .upper()
	


-- EXECUTION TIME:
0.137723
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 9, in <module>
    print("SUFICIENTE") .upper()
AttributeError: 'NoneType' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:51:59) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	msg="suficiente" .upper()
else:
	msg="insuficiente" .upper()
	
print(msg)

-- EXECUTION TIME:
0.164056
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:52:00) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	msg="suficiente" .upper()
else:
	msg="insuficiente" .upper()
	
print(msg)

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:52:00) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	msg="suficiente" .upper()
else:
	msg="insuficiente" .upper()
	
print(msg)

-- EXECUTION TIME:
0.161134
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
Digite um numero: Digite um numero: Digite um numero: Digite um numero: Digite um numero: SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:52:07) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	msg="suficiente".upper()
else:
	msg="insuficiente".upper()
	
print(msg)

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:52:19) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(total>=valor):
	msg="suficiente".upper()
else:
	msg="insuficiente".upper()
	
print(msg)

-- EXECUTION TIME:
0.171196
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:52:47) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(valor>=total):
	msg="suficiente".upper()
else:
	msg="insuficiente".upper()
	
print(msg)

-- EXECUTION TIME:
0.14698
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:52:49) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*valor)+(qonibus*vonibus))
if(valor>=total):
	msg="suficiente".upper()
else:
	msg="insuficiente".upper()
	
print(msg)

-- EXECUTION TIME:
0.217415
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:53:23) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*vticket)+(qonibus*vonibus))
if(valor>=total):
	msg="suficiente".upper()
else:
	msg="insuficiente".upper()
	
print(msg)

-- EXECUTION TIME:
0.276768
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:53:23) 
-- CODE:
valor = float(input("Digite um numero: "))
qticket = int(input("Digite um numero: "))
vticket = float(input("Digite um numero: "))
qonibus = int(input("Digite um numero: "))
vonibus = float(input("Digite um numero: "))

total=((qticket*vticket)+(qonibus*vonibus))
if(valor>=total):
	msg="suficiente".upper()
else:
	msg="insuficiente".upper()
	
print(msg)

-- EXECUTION TIME:
0.155904
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
